; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_wiiu.c_main.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_wiiu.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 (...) @main_setup()
  %7 = call i32 @get_arguments(i32* %4, i8*** %5)
  %8 = load i32, i32* %4, align 4
  %9 = load i8**, i8*** %5, align 8
  %10 = call i32 @rarch_main(i32 %8, i8** %9, i32* null)
  %11 = call i32 (...) @main_loop()
  %12 = call i32 @main_exit(i32* null)
  %13 = call i32 (...) @main_teardown()
  ret i32 0
}

declare dso_local i32 @main_setup(...) #1

declare dso_local i32 @get_arguments(i32*, i8***) #1

declare dso_local i32 @rarch_main(i32, i8**, i32*) #1

declare dso_local i32 @main_loop(...) #1

declare dso_local i32 @main_exit(i32*) #1

declare dso_local i32 @main_teardown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
